--- a/AICodeAnalyzer/AICodeAnalyzer.csproj
+++ b/AICodeAnalyzer/AICodeAnalyzer.csproj
@@ -5,10 +5,10 @@
     <TargetFramework>net9.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <Nullable>enable</Nullable>
-    <ApplicationIcon>icon\icon.ico</ApplicationIcon>
+    <ApplicationIcon>icon\icon2.ico</ApplicationIcon>
     <IsPackable>false</IsPackable>
-    <AssemblyVersion>1</AssemblyVersion>
-    <FileVersion>1</FileVersion>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
 
