**Integrate recent files support and enhance file association management**
Added a `RecentFilesManager` to track and display recently accessed files in the GUI, with options to clear the list. Improved file association handling with `FileAssociationManager`, streamlining registry management. Updated model descriptions and enhanced dropdown behaviors for better clarity and usability.

--- a/AICodeAnalyzer/AICodeAnalyzer.csproj
+++ b/AICodeAnalyzer/AICodeAnalyzer.csproj
@@ -10,6 +10,7 @@
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
