Enhance zoom functionality and improve UI features
Added editable zoom support for raw text view with scroll preservation. Updated `About` window with dynamic version display, hyperlinks, and a new logo. Improved markdown edit/save workflow and UI styling for better usability.

--- a/AICodeAnalyzer/AICodeAnalyzer.csproj
+++ b/AICodeAnalyzer/AICodeAnalyzer.csproj
@@ -32,6 +32,8 @@
     <Resource Include="images\reset.png" />
     <None Remove="images\settings.png" />
     <Resource Include="images\settings.png" />
+    <None Remove="images\logo.png" />
+    <Resource Include="images\logo.png" />
   </ItemGroup>
 
 </Project>
