Update file handling, serialization, and localization
Enhanced safe XML handling with improved reader/writer settings, added proper localization for date/time formats, and optimized file grouping logic. Fixed minor issues in error logging and ensured consistent behavior in Markdown and file operations.

--- a/AICodeAnalyzer/AICodeAnalyzer.csproj
+++ b/AICodeAnalyzer/AICodeAnalyzer.csproj
@@ -11,6 +11,7 @@
     <FileVersion>1.0.0.0</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -34,6 +35,11 @@
     <Resource Include="images\settings.png" />
     <None Remove="images\logo.png" />
     <Resource Include="images\logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Markdown\Markdown.cs" />
+    <Compile Remove="Markdown\SyntaxHighlightingExtensions.cs" />
   </ItemGroup>
 
 </Project>
