--- a/AICodeAnalyzer/AICodeAnalyzer.csproj
+++ b/AICodeAnalyzer/AICodeAnalyzer.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Markdig.Wpf" Version="0.5.0.1" />
     <PackageReference Include="MessagePack" Version="3.1.3" />
     <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
+    <PackageReference Include="SharpToken" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
