--- a/AICodeAnalyzer/AICodeAnalyzer.csproj
+++ b/AICodeAnalyzer/AICodeAnalyzer.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.41.0" />
     <PackageReference Include="Markdig.Wpf" Version="0.5.0.1" />
+    <PackageReference Include="Markdown.ColorCode" Version="3.0.0" />
     <PackageReference Include="MessagePack" Version="3.1.3" />
     <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
     <PackageReference Include="SharpToken" Version="2.0.3" />
