--- a/AICodeAnalyzer/AICodeAnalyzer.csproj
+++ b/AICodeAnalyzer/AICodeAnalyzer.csproj
@@ -7,14 +7,15 @@
     <Nullable>enable</Nullable>
     <ApplicationIcon>icon\icon.ico</ApplicationIcon>
     <IsPackable>false</IsPackable>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <AssemblyVersion>1.1</AssemblyVersion>
+    <FileVersion>1.1</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.41.0" />
     <PackageReference Include="Markdig.Wpf" Version="0.5.0.1" />
     <PackageReference Include="Markdown.ColorCode" Version="3.0.0" />
     <PackageReference Include="MessagePack" Version="3.1.3" />
@@ -38,6 +39,22 @@
     <Resource Include="images\settings.png" />
     <None Remove="images\logo.png" />
     <Resource Include="images\logo.png" />
+    <None Remove="Resources\prism.css" />
+    <Resource Include="Resources\prism.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <None Remove="Resources\prism.js" />
+    <Resource Include="Resources\prism.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <None Remove="Resources\prism-csharp.min.js" />
+    <Resource Include="Resources\prism-csharp.min.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <None Remove="Resources\prism-python.min.js" />
+    <Resource Include="Resources\prism-python.min.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
