--- a/AICodeAnalyzer/AICodeAnalyzer.csproj
+++ b/AICodeAnalyzer/AICodeAnalyzer.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MahApps.Metro" Version="2.4.10" /> <!-- Add this line -->
     <PackageReference Include="Markdig" Version="0.41.0" />
     <PackageReference Include="Markdig.Wpf" Version="0.5.0.1" />
     <PackageReference Include="Markdown.ColorCode" Version="3.0.0" />
@@ -39,6 +40,8 @@
     <Resource Include="images\settings.png" />
     <None Remove="images\logo.png" />
     <Resource Include="images\logo.png" />
+    <None Remove="images\theme.png" /> <!-- Add this line -->
+    <Resource Include="images\theme.png" /> <!-- Add this line -->
   </ItemGroup>
 
   <ItemGroup>
