--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 ﻿/AICodeAnalyzer_analysis_20250406_224410.md
 /AICodeAnalyzer_analysis_20250410_164539.md
+!/CSharp_AICodeAnalyzer.sln.DotSettings.user
+!/CSharp_AICodeAnalyzer.sln.DotSettings.user
